infrastructure/tpi-1/alerting/httproute-alertmanager.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: alertmanager
  namespace: alerting
  annotations:
    external-dns.alpha.kubernetes.io/target: gw.nas.absolutist.it
spec:
  parentRefs:
  - name: internal-gw
    namespace: infrastructure
  hostnames:
  - "alertmanager.absolutist.it"
  rules:
  - backendRefs:
    - name: vmalertmanager-tpi-1
      port: 9093
