infrastructure/tpi-1/alerting/httproute-vlogs.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vmalert-vlogs
  namespace: alerting
  annotations:
    external-dns.alpha.kubernetes.io/target: gw.nas.absolutist.it
spec:
  parentRefs:
  - name: internal-gw
    namespace: infrastructure
  hostnames:
  - "log-alerts.absolutist.it"
  rules:
  - backendRefs:
    - name: vmalert-vlogs-tpi-1
      port: 8080
